[package]
name = "bifrosty"
version = "0.0.1"
description = "Valhalla data handling in Rust."
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
repository = "https://github.com/nyurik/bifrosty"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["valhalla"]
categories = ["science::geo"]
rust-version = "1.85"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4"

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
